k8s/3.03.fluent-bit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluent-bit
  namespace: elastic
spec:
  ports:
  - port: 2020
    name: http
  selector:
    app: fluent-bit
